--- a/default/app.conf
+++ b/default/app.conf
@@ -5,15 +5,14 @@ label = SD-WAN VCO Event Log
 [launcher]
 version = 2.0.0
 description = Extract the VMware SD-WAN Event Log via VCO API to Splunk
-author=dwayne@beyondcli.com
-email=dwayne@beyondcli.com
+author=dwaynesinclair
 
 [package]
 check_for_updates = 1
 id = ds_sdwan_events
 
 [install]
-is_configured = 1
+is_configured = 0
 state = enabled
 build = 200
 python.version = python3
