--- a/default/app.conf
+++ b/default/app.conf
@@ -3,9 +3,9 @@ is_visible = 1
 label = SD-WAN VCO Event Log
 
 [launcher]
-version = 2.0.1
+version = 2.0.8
 description = Extract the VMware SD-WAN Event Log via VCO API to Splunk
-author=dwaynesinclair
+author = dwaynesinclair
 
 [package]
 check_for_updates = 1
@@ -13,6 +13,6 @@ id = ds_sdwan_events
 
 [install]
 is_configured = 0
-state = enabled
-build = 201
+state = disabled
+build = 207
 python.version = python3
